--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Quran Verses"
+      content="See your Quran verse of the day"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Quran quotes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
