--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta
-      name="Quran Verses"
+      name="description"
       content="See your Quran verse of the day"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
